GitVersion1/objects/DCR_Day__c.object
<CustomObject>
    <fields>
        <fullName>Product3__c</fullName>
        <label>Product Discussed 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VETACEPH PLUS</fullName>
                </value>
                <value>
                    <fullName>KLUTCH</fullName>
                </value>
                <value>
                    <fullName>3 CARE BOLUS</fullName>
                </value>
                <value>
                    <fullName>ALL CLEAR BOLUS</fullName>
                </value>
                <value>
                    <fullName>BESTMIN GOLD</fullName>
                </value>
                <value>
                    <fullName>CALUP GEL</fullName>
                </value>
                <value>
                    <fullName>COBACAL D</fullName>
                </value>
                <value>
                    <fullName>DURAPROGEN</fullName>
                </value>
                <value>
                    <fullName>FLUKOUT</fullName>
                </value>
                <value>
                    <fullName>GALACSHOT</fullName>
                </value>
                <value>
                    <fullName>LIVOFEROL LIQUID</fullName>
                </value>
                <value>
                    <fullName>METHOCHELATED PROVICAL FORTE</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC BOLUS</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC POWER PACK</fullName>
                </value>
                <value>
                    <fullName>POLYGESIC INJ</fullName>
                </value>
                <value>
                    <fullName>PROVISACC FORTE</fullName>
                </value>
                <value>
                    <fullName>PROVISACC BOLUS</fullName>
                </value>
                <value>
                    <fullName>PROVISACC PLUS BOLUS 4*S</fullName>
                </value>
                <value>
                    <fullName>PYRIDASE BOLUS 4*S</fullName>
                </value>
                <value>
                    <fullName>UNIMYCIN INJ.</fullName>
                </value>
                <value>
                    <fullName>WUNIL</fullName>
                </value>
                <value>
                    <fullName>DETIK</fullName>
                </value>
                <value>
                    <fullName>E CARE SE ORAL</fullName>
                </value>
                <value>
                    <fullName>HELMIGARD SUPREME</fullName>
                </value>
                <value>
                    <fullName>BOVIZOX</fullName>
                </value>
                <value>
                    <fullName>VETMATE</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC ADVANCE BOLUS</fullName>
                </value>
                <value>
                    <fullName>E CARE SE INJ</fullName>
                </value>
                <value>
                    <fullName>VETACEPH TAZO</fullName>
                </value>
                <value>
                    <fullName>LIVOFEROL P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Details1__c</fullName>
        <label>Product Sample 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3 CARE BOLUS - 60*S FS</fullName>
                </value>
                <value>
                    <fullName>ALL CLEAR 3000 – 1*S x 180 FS</fullName>
                </value>
                <value>
                    <fullName>BESTMIN GOLD 250G FS</fullName>
                </value>
                <value>
                    <fullName>BOVIZOX - 2.5G INJ.</fullName>
                </value>
                <value>
                    <fullName>CALSHOT 500 ML SAMPLE</fullName>
                </value>
                <value>
                    <fullName>CALUP GEL 300G</fullName>
                </value>
                <value>
                    <fullName>COBACAL-D - 30ML SAMPLE</fullName>
                </value>
                <value>
                    <fullName>DURAPROGEN INJ - 2ML</fullName>
                </value>
                <value>
                    <fullName>FLUKOUT - 100 ML FS</fullName>
                </value>
                <value>
                    <fullName>GALACSHOT FREE SAMPLE - 500G</fullName>
                </value>
                <value>
                    <fullName>HEALWELL 100ML</fullName>
                </value>
                <value>
                    <fullName>HELMIGARD SUSP. - 30ML FS</fullName>
                </value>
                <value>
                    <fullName>KLUTCH SAMPLE 500G</fullName>
                </value>
                <value>
                    <fullName>LIVOFEROL LIQUID 500ML FS</fullName>
                </value>
                <value>
                    <fullName>METHOCHELATED PROVICAL FORTE 500ML FS</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC BOLUS 15*S</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC ADVANCE BOLUS - 7&apos;S SAMPLE</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC POWER PACK 500G</fullName>
                </value>
                <value>
                    <fullName>POLYGESIC INJ - 30ML  SAMPLE</fullName>
                </value>
                <value>
                    <fullName>PROVISACC FORTE - 20 G SACHET SAMPLE</fullName>
                </value>
                <value>
                    <fullName>PROVISACC PLUS BOLUS - 4*S SAMPLE</fullName>
                </value>
                <value>
                    <fullName>PYRIDASE BOLUS 4*S SAMPLE</fullName>
                </value>
                <value>
                    <fullName>SYNBAC- 3G SAMPLE</fullName>
                </value>
                <value>
                    <fullName>SYNBAC- 4G</fullName>
                </value>
                <value>
                    <fullName>TYLAN INJ  - 100ML (FREE SAMPLE)</fullName>
                </value>
                <value>
                    <fullName>UNIMYCIN INJ. - 30ML SAMPLE</fullName>
                </value>
                <value>
                    <fullName>VETACEPH - 3G</fullName>
                </value>
                <value>
                    <fullName>VETACEPH - 4G SAMPLE</fullName>
                </value>
                <value>
                    <fullName>VETACEPH PLUS - 4.5G</fullName>
                </value>
                <value>
                    <fullName>VETACEPH TAZO - 3.375G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Details2__c</fullName>
        <label>Product Sample 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3 CARE BOLUS - 60*S FS</fullName>
                </value>
                <value>
                    <fullName>ALL CLEAR 3000 – 1*S x 180 FS</fullName>
                </value>
                <value>
                    <fullName>BESTMIN GOLD 250G FS</fullName>
                </value>
                <value>
                    <fullName>BOVIZOX - 2.5G INJ.</fullName>
                </value>
                <value>
                    <fullName>CALSHOT 500 ML SAMPLE</fullName>
                </value>
                <value>
                    <fullName>CALUP GEL 300G</fullName>
                </value>
                <value>
                    <fullName>COBACAL-D - 30ML SAMPLE</fullName>
                </value>
                <value>
                    <fullName>DURAPROGEN INJ - 2ML</fullName>
                </value>
                <value>
                    <fullName>FLUKOUT - 100 ML FS</fullName>
                </value>
                <value>
                    <fullName>GALACSHOT FREE SAMPLE - 500G</fullName>
                </value>
                <value>
                    <fullName>HEALWELL 100ML</fullName>
                </value>
                <value>
                    <fullName>HELMIGARD SUSP. - 30ML FS</fullName>
                </value>
                <value>
                    <fullName>KLUTCH SAMPLE 500G</fullName>
                </value>
                <value>
                    <fullName>LIVOFEROL LIQUID 500ML FS</fullName>
                </value>
                <value>
                    <fullName>METHOCHELATED PROVICAL FORTE 500ML FS</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC BOLUS 15*S</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC ADVANCE BOLUS - 7&apos;S SAMPLE</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC POWER PACK 500G</fullName>
                </value>
                <value>
                    <fullName>POLYGESIC INJ - 30ML  SAMPLE</fullName>
                </value>
                <value>
                    <fullName>PROVISACC FORTE - 20 G SACHET SAMPLE</fullName>
                </value>
                <value>
                    <fullName>PROVISACC PLUS BOLUS - 4*S SAMPLE</fullName>
                </value>
                <value>
                    <fullName>PYRIDASE BOLUS 4*S SAMPLE</fullName>
                </value>
                <value>
                    <fullName>SYNBAC- 3G SAMPLE</fullName>
                </value>
                <value>
                    <fullName>SYNBAC- 4G</fullName>
                </value>
                <value>
                    <fullName>TYLAN INJ  - 100ML (FREE SAMPLE)</fullName>
                </value>
                <value>
                    <fullName>UNIMYCIN INJ. - 30ML SAMPLE</fullName>
                </value>
                <value>
                    <fullName>VETACEPH - 3G</fullName>
                </value>
                <value>
                    <fullName>VETACEPH - 4G SAMPLE</fullName>
                </value>
                <value>
                    <fullName>VETACEPH PLUS - 4.5G</fullName>
                </value>
                <value>
                    <fullName>VETACEPH TAZO - 3.375G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Details3__c</fullName>
        <label>Product Sample 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3 CARE BOLUS - 60*S FS</fullName>
                </value>
                <value>
                    <fullName>ALL CLEAR 3000 – 1*S x 180 FS</fullName>
                </value>
                <value>
                    <fullName>BESTMIN GOLD 250G FS</fullName>
                </value>
                <value>
                    <fullName>BOVIZOX - 2.5G INJ.</fullName>
                </value>
                <value>
                    <fullName>CALSHOT 500 ML SAMPLE</fullName>
                </value>
                <value>
                    <fullName>CALUP GEL 300G</fullName>
                </value>
                <value>
                    <fullName>COBACAL-D - 30ML SAMPLE</fullName>
                </value>
                <value>
                    <fullName>DURAPROGEN INJ - 2ML</fullName>
                </value>
                <value>
                    <fullName>FLUKOUT - 100 ML FS</fullName>
                </value>
                <value>
                    <fullName>GALACSHOT FREE SAMPLE - 500G</fullName>
                </value>
                <value>
                    <fullName>HEALWELL 100ML</fullName>
                </value>
                <value>
                    <fullName>HELMIGARD SUSP. - 30ML FS</fullName>
                </value>
                <value>
                    <fullName>KLUTCH SAMPLE 500G</fullName>
                </value>
                <value>
                    <fullName>LIVOFEROL LIQUID 500ML FS</fullName>
                </value>
                <value>
                    <fullName>METHOCHELATED PROVICAL FORTE 500ML FS</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC BOLUS 15*S</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC ADVANCE BOLUS - 7&apos;S SAMPLE</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC POWER PACK 500G</fullName>
                </value>
                <value>
                    <fullName>POLYGESIC INJ - 30ML  SAMPLE</fullName>
                </value>
                <value>
                    <fullName>PROVISACC FORTE - 20 G SACHET SAMPLE</fullName>
                </value>
                <value>
                    <fullName>PROVISACC PLUS BOLUS - 4*S SAMPLE</fullName>
                </value>
                <value>
                    <fullName>PYRIDASE BOLUS 4*S SAMPLE</fullName>
                </value>
                <value>
                    <fullName>SYNBAC- 3G SAMPLE</fullName>
                </value>
                <value>
                    <fullName>SYNBAC- 4G</fullName>
                </value>
                <value>
                    <fullName>TYLAN INJ  - 100ML (FREE SAMPLE)</fullName>
                </value>
                <value>
                    <fullName>UNIMYCIN INJ. - 30ML SAMPLE</fullName>
                </value>
                <value>
                    <fullName>VETACEPH - 3G</fullName>
                </value>
                <value>
                    <fullName>VETACEPH - 4G SAMPLE</fullName>
                </value>
                <value>
                    <fullName>VETACEPH PLUS - 4.5G</fullName>
                </value>
                <value>
                    <fullName>VETACEPH TAZO - 3.375G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Quantity1__c</fullName>
        <label>Product Quantity 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Quantity2__c</fullName>
        <label>Product Quantity 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Quantity3__c</fullName>
        <label>Product Quantity 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional_Office__c</fullName>
        <formula>IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Regional Office&apos;), ISPICKVAL(Second_Half__c, &apos;Regional Office&apos;)),1.0, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Regional Office&apos;), NOT(ISPICKVAL(Second_Half__c, &apos;Regional Office&apos;))),0.5, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(Second_Half__c, &apos;Regional Office&apos;), NOT(ISPICKVAL(First_Half__c, &apos;Regional Office&apos;))),0.5,0.0)) 
)</formula>
        <label>Regional Office</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route_No__c</fullName>
        <formula>Route__r.Name__c</formula>
        <label>Route No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Route</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Route__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>DCR Days</relationshipLabel>
        <relationshipName>Reporting_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Half__c</fullName>
        <label>Second Half</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Visit</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Group Meeting</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Transit</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Branch Visit</fullName>
                </value>
                <value>
                    <fullName>Regional Office</fullName>
                </value>
                <value>
                    <fullName>Dog Show</fullName>
                </value>
                <value>
                    <fullName>Exhibition</fullName>
                </value>
                <value>
                    <fullName>On Field</fullName>
                    <isActive>false</isActive>
                    <label>On Field</label>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                    <isActive>false</isActive>
                    <label>Vacation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seminar__c</fullName>
        <formula>IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Seminar&apos;), ISPICKVAL(Second_Half__c, &apos;Seminar&apos;)),1.0, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Seminar&apos;), NOT(ISPICKVAL(Second_Half__c, &apos;Seminar&apos;))),0.5, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(Second_Half__c, &apos;Seminar&apos;), NOT(ISPICKVAL(First_Half__c, &apos;Seminar&apos;))),0.5,0.0)) 
)</formula>
        <label>Seminar</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Territory</label>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>DCR Days</relationshipLabel>
        <relationshipName>Reporting_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <formula>IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Training&apos;), ISPICKVAL(Second_Half__c, &apos;Training&apos;)),1.0, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Training&apos;), NOT(ISPICKVAL(Second_Half__c, &apos;Training&apos;))),0.5, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(Second_Half__c, &apos;Training&apos;), NOT(ISPICKVAL(First_Half__c, &apos;Training&apos;))),0.5,0.0)) 
)</formula>
        <label>Training</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transit__c</fullName>
        <formula>IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Transit&apos;), ISPICKVAL(Second_Half__c, &apos;Transit&apos;)),1.0, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Transit&apos;), NOT(ISPICKVAL(Second_Half__c, &apos;Transit&apos;))),0.5, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(Second_Half__c, &apos;Transit&apos;), NOT(ISPICKVAL(First_Half__c, &apos;Transit&apos;))),0.5,0.0)) 
)</formula>
        <label>Transit</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <formula>Target__r.Employee_Link_To__r.User_Type__c</formula>
        <label>User Type</label>
        <type>Text</type>
    </fields>
    <label>DCR Day</label>
    <nameField>
        <displayFormat>DCR Day - {0}</displayFormat>
        <label>DCR Day</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCR Days</pluralLabel>
    <recordTypes>
        <fullName>DCR_Customer</fullName>
        <active>true</active>
        <label>DCR Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCR_Day</fullName>
        <active>true</active>
        <label>DCR Day</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_is_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>if(AND(RecordType.DeveloperName== $Label.DCR_Customer_Record_Type, Account__c ==NULL),true,false)</errorConditionFormula>
        <errorMessage>Please select an Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Brand_Quantity_Cannot_be_Negative</fullName>
        <active>true</active>
        <description>Validation for Quantity Fields</description>
        <errorConditionFormula>if(OR( Brand_Reminder1_Quantity__c&lt;0 , Brand_Reminder2_Quantity__c&lt;0 , Brand_Reminder3_Quantity__c&lt;0 , Brand_Reminder4_Quantity__c&lt;0 , Brand_Reminder5_Quantity__c&lt;0),true,false)</errorConditionFormula>
        <errorMessage>Brand Reminder Quantity Cannot be Negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Brand_Reminder_Quantity_Not_Required</fullName>
        <active>true</active>
        <description>This validation rule check if the Brand reminder is not selected , Brand reminder quantity cannot be added.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName== $Label.DCR_Customer_Record_Type ,OR(
AND(ISPICKVAL(Brand_Reminder1__c,&quot;&quot;),   
NOT(ISBLANK(Brand_Reminder1_Quantity__c))),
AND(ISPICKVAL(Brand_Reminder2__c,&quot;&quot;),   
NOT(ISBLANK(Brand_Reminder2_Quantity__c))),
AND(ISPICKVAL(Brand_Reminder3__c,&quot;&quot;),   
NOT(ISBLANK(Brand_Reminder3_Quantity__c))),
AND(ISPICKVAL(Brand_Reminder4__c,&quot;&quot;),   
NOT(ISBLANK(Brand_Reminder4_Quantity__c))),
AND(ISPICKVAL(Brand_Reminder5__c,&quot;&quot;),   
NOT(ISBLANK(Brand_Reminder5_Quantity__c)))
))</errorConditionFormula>
        <errorMessage>Please select the Brand Reminder.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Brand_Reminder_Quantity_Required</fullName>
        <active>true</active>
        <description>This validation rule check the Brand Reminder Quantity field if it is blank when   brand reminder is selected.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName== $Label.DCR_Customer_Record_Type ,OR( 
AND(NOT(ISPICKVAL(Brand_Reminder1__c,&quot;&quot;)),  ISBLANK(Brand_Reminder1_Quantity__c)),
AND(NOT(ISPICKVAL(Brand_Reminder2__c,&quot;&quot;)),
ISBLANK(Brand_Reminder2_Quantity__c)),
AND(NOT(ISPICKVAL(Brand_Reminder3__c,&quot;&quot;)),
ISBLANK(Brand_Reminder3_Quantity__c)),
AND(NOT(ISPICKVAL(Brand_Reminder4__c,&quot;&quot;)),
ISBLANK(Brand_Reminder4_Quantity__c)),
AND(NOT(ISPICKVAL(Brand_Reminder5__c,&quot;&quot;)),
ISBLANK(Brand_Reminder5_Quantity__c))

))</errorConditionFormula>
        <errorMessage>Please enter Brand Reminder Quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>if(RecordType.Name==&apos;DCR Customer&apos; &amp;&amp; OR(!ISBLANK(text(Product1__c ))
,!ISBLANK(text(Product2__c )),!ISBLANK(text(Product3__c )),!ISBLANK(text(Product4__c )),!ISBLANK(text(Product5__c ))) &amp;&amp;  ISBLANK(Comments__c),true,false )</errorConditionFormula>
        <errorMessage>Comment field is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Half_Required</fullName>
        <active>true</active>
        <description>First Half is a required field for DCR Parent record</description>
        <errorConditionFormula>if( RecordType.DeveloperName == $Label.DCR_Day_RecordType &amp;&amp; 
ISPICKVAL(First_Half__c,&quot;&quot;),true,false)</errorConditionFormula>
        <errorDisplayField>First_Half__c</errorDisplayField>
        <errorMessage>First Half is a Required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Line_of_Business_Selection</fullName>
        <active>true</active>
        <errorConditionFormula>if( RecordType.Name==&apos;DCR Customer&apos; &amp;&amp; text(LOB__c)!=text( DCR_Day__r.Target__r.Employee_Link_To__r.Line_Of_Business__c ),true,false)</errorConditionFormula>
        <errorMessage>Please select a valid Line of business</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Sample_Quantity_Not_Required</fullName>
        <active>true</active>
        <description>This validation rule check if the Product Sample is not selected , Product Sample quantity cannot be added.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName== $Label.DCR_Customer_Record_Type ,OR(
AND(ISPICKVAL(Product_Details1__c,&quot;&quot;),   
NOT(ISBLANK(Product_Quantity1__c))),
AND(ISPICKVAL(Product_Details2__c,&quot;&quot;),   
NOT(ISBLANK(Product_Quantity2__c))),
AND(ISPICKVAL(Product_Details3__c,&quot;&quot;),   
NOT(ISBLANK(Product_Quantity3__c))),
AND(ISPICKVAL(Product_Details4__c,&quot;&quot;),   
NOT(ISBLANK(Product_Quantity4__c))),
AND(ISPICKVAL(Product_Details5__c,&quot;&quot;),   
NOT(ISBLANK(Product_Quantity5__c)))
))</errorConditionFormula>
        <errorMessage>Please select Product Sample.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Sample_Quantity_Required</fullName>
        <active>true</active>
        <description>This validation rule check the Product sample Quantity field if it is blank when Product sample  is selected.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName== $Label.DCR_Customer_Record_Type ,OR(
AND(NOT(ISPICKVAL(Product_Details1__c,&quot;&quot;)),  ISBLANK(Product_Quantity1__c)),
AND(NOT(ISPICKVAL(Product_Details2__c,&quot;&quot;)),
ISBLANK(Product_Quantity2__c)),
AND(NOT(ISPICKVAL(Product_Details3__c,&quot;&quot;)),
ISBLANK(Product_Quantity3__c)),
AND(NOT(ISPICKVAL(Product_Details4__c,&quot;&quot;)),
ISBLANK(Product_Quantity4__c)),
AND(NOT(ISPICKVAL(Product_Details5__c,&quot;&quot;)),
ISBLANK(Product_Quantity5__c))

))</errorConditionFormula>
        <errorMessage>Please enter Product Sample Quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Sample_Quantity_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>if(or( Product_Quantity1__c&lt;0 , Product_Quantity2__c&lt;0 , Product_Quantity3__c &lt;0, Product_Quantity4__c&lt;0,Product_Quantity5__c&lt;0 ),true,false)</errorConditionFormula>
        <errorMessage>Product Sample Quantity cannot be Negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Route_is_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>if(AND(RecordType.DeveloperName== $Label.DCR_Customer_Record_Type,  Route__c ==NULL),true,false)</errorConditionFormula>
        <errorMessage>Please select a Route</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Second_Half_Required</fullName>
        <active>true</active>
        <description>Second Half is Required for DCR Parent Record Type</description>
        <errorConditionFormula>if( RecordType.DeveloperName == $Label.DCR_Day_RecordType &amp;&amp; 
 ISPICKVAL(Second_Half__c,&quot;&quot;),true,false)</errorConditionFormula>
        <errorDisplayField>Second_Half__c</errorDisplayField>
        <errorMessage>Second Half is a Required field</errorMessage>
    </validationRules>
</CustomObject>